Currently app is starting with momentos_pasteleria_core module On branch development Your branch is up to date with 'origin/development'.
Changes to be committed:
	modified:   .gitignore
	renamed:    backend/app.py -> backend/app/__init__.py
	new file:   backend/app/config.py
	new file:   backend/app/dbconfig.py
	new file:   backend/app/momentos_pasteleria_core/__init__.py
	new file:   backend/app/momentos_pasteleria_core/models/users.py
	renamed:    backend/config.py -> backend/app/momentos_pasteleria_core/routes/__init__.py
	new file:   backend/app/momentos_pasteleria_core/routes/main.py
	new file:   backend/app/wsgi.py
	deleted:    backend/dbconfig.py

--- a/.gitignore
+++ b/.gitignore
@@ -7,5 +7,8 @@
 /frontend/momentos-pasteleria/jsconfig.json
 
 
+/frontend/momentos-pasteleria/.next
+
 #backend dependencies
 /backend/.venv
+__pycache__
