adding role models and services folder  On branch development Your branch is up to date with 'origin/development'. 	modified:   backend/app/momentos_pasteleria_core/__init__.py 	new file:   backend/app/momentos_pasteleria_core/models/__init__.py 	new file:   backend/app/momentos_pasteleria_core/models/addresses_model.py 	new file:   backend/app/momentos_pasteleria_core/models/client_model.py 	new file:   backend/app/momentos_pasteleria_core/models/roles_model.py 	new file:   backend/app/momentos_pasteleria_core/routes/client_route.py 	modified:   backend/app/momentos_pasteleria_core/routes/main.py 	new file:   backend/app/momentos_pasteleria_core/services/__init__.py 	new file:   backend/app/momentos_pasteleria_core/services/roles_services.py 	deleted:    backend/app/wsgi.py 	new file:   backend/requirements.txt

--- a/.gitignore
+++ b/.gitignore
@@ -5,10 +5,14 @@
 
 # frontend config files
 /frontend/momentos-pasteleria/jsconfig.json
-
-
 /frontend/momentos-pasteleria/.next
 
 #backend dependencies
 /backend/.venv
 __pycache__
+
+#other
+backend_logic.txt
+/backend/.notes.txt
+/backend/app/migrations
+/backend/app/mp.log
